--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^5.9.7",
     "node-env-file": "^0.1.8",
     "path": "^0.12.7",
+    "redis": "^3.0.2",
     "serve-favicon": "^2.5.0",
     "url": "^0.11.0"
   }
