--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Config-Example",
+  "name": "config-example",
   "version": "1.0.0",
   "description": "A simple example to show using a config file and env file",
   "main": "./src/app.js",
@@ -11,23 +11,21 @@
   "author": "Cody Van De Mark / Austin Willoughby",
   "license": "Apache 2.0",
   "devDependencies": {
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-plugin-import": "^2.20.2"
+    "eslint": "^8.12.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.26.0"
   },
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.20.0",
     "compression": "^1.7.4",
-    "connect-redis": "^4.0.4",
-    "cookie-parser": "^1.4.5",
-    "express": "^4.17.1",
-    "express-handlebars": "^4.0.2",
-    "express-session": "^1.17.0",
-    "mongoose": "^5.9.7",
-    "dotenv": "^8.2.0",
-    "path": "^0.12.7",
-    "redis": "^3.0.2",
-    "serve-favicon": "^2.5.0",
-    "url": "^0.11.0"
+    "connect-redis": "^6.1.3",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "express-handlebars": "^6.0.4",
+    "express-session": "^1.17.2",
+    "mongoose": "^6.2.10",
+    "redis": "^4.0.6",
+    "serve-favicon": "^2.5.0"
   }
 }
